--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,10 @@
   color: #61dafb;
 }
 
+.click-here {
+  cursor: pointer;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
